--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,12 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "mx.itesm.csf.calvin_catalogue"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -24,11 +25,13 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:support-vector-drawable:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    implementation 'com.github.navasmdc:MaterialDesign:1.5@aar'
+    implementation 'com.github.vajro:MaterialDesignLibrary:1.6'
     implementation 'gr.pantrif:easy-android-splash-screen:0.0.1'
     implementation 'com.android.volley:volley:1.0.0'
     implementation 'com.android.support:cardview-v7:27.1.1'
