Gerente contiene reporte de Ventas y de vendedor

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         <activity android:name=".VendedorActivity" />
         <activity
             android:name=".GerenteActivity"
-            android:label="@string/title_activity_gerente"></activity>
+            android:label="@string/title_activity_gerente" />
+        <activity android:name=".GerenteFragments.ReporteVendedor"></activity>
     </application>
 
 </manifest>
