Listo Dueño de empresa (faltan solo cosas en cliente)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
         <activity
             android:name=".GerenteActivity"
             android:label="@string/title_activity_gerente" />
-        <activity android:name=".GerenteFragments.ReporteVendedor"></activity>
+        <activity android:name=".GerenteFragments.ReporteVendedor" />
+        <activity android:name=".GerenteFragments.AgregarVendedor"></activity>
+        <activity android:name=".OwnerActivity"></activity>
     </application>
 
 </manifest>
